# stratum_cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  job_queue.hpp  logger.h  socket.cpp  socket.h  stratum.h  stratum_client.cpp  stratum_client.h  stratum_protocol.hpp  stratum_request.cpp  stratum_request.h  stratum_response.cpp  stratum_response.h  types.h
test_miner/: CMakeLists.txt  main.cpp  test_miner.cpp  test_miner.h
tests/: CMakeLists.txt  stratum_tests.cpp  tcp_tests.cpp
